[tool.poetry]
name = "repl_python3_final-project-spiky-koalas"
version = "0.1.0"
description = ""
authors = ["Steven_AA <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
